--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_HYJD/HQSY_HYJD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_HYJD/HQSY_HYJD.cshtml
@@ -104,6 +104,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divHYJDHLLXTip"></div>
             </div>
             <div id="divJDLX" class="div_row" style="z-index: 998">
                 <div class="div_row_left">
@@ -112,15 +113,16 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_jdlx_xjjd">
-                        <img class="img_radio" id="img_jdlx_xjjd" /><label class="label_radio">星级酒店</label>
+                        <img class="img_radio" id="img_jdlx_xjjd"/><label class="label_radio">星级酒店</label>
                     </div>
                     <div class="div_radio" id="div_jdlx_tsct">
-                        <img class="img_radio" id="img_jdlx_tsct" /><label class="label_radio">特色餐厅</label>
+                        <img class="img_radio" id="img_jdlx_tsct"/><label class="label_radio">特色餐厅</label>
                     </div>
                     <div class="div_radio" id="div_jdlx_gjhs">
-                        <img class="img_radio" id="img_jdlx_gjhs" /><label class="label_radio">高级会所</label>
+                        <img class="img_radio" id="img_jdlx_gjhs"/><label class="label_radio">高级会所</label>
                     </div>
                 </div>
+                <div id="divJDLXTip"></div>
             </div>
             <div id="divHYJDJDXJ" class="div_row" style="z-index: 997">
                 <div class="div_row_left">
@@ -137,6 +139,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divHYJDJDXJTip"></div>
             </div>
             <div id="divRNZS" class="div_row" style="z-index: 996;">
                 <div class="div_row_left">
@@ -149,7 +152,7 @@
                         <span class="spaninput_fontcolor">桌</span>
                     </span>
                 </div>
-                <div id="divRNZSTip" class="Warn" style="z-index: 996; position: relative;"></div>
+                <div id="divRNZSTip" class="Warn"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -162,7 +165,7 @@
                         <span class="spaninput_fontcolor">元</span>
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 995; position: relative;"></div>
+                <div id="divJGTip" class="Warn"></div>
             </div>
             <div id="divFWQY" class="div_row" style="z-index: 994">
                 <div class="div_row_left">
@@ -232,16 +235,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -249,8 +252,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
