--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_SY/HQSY_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_SY/HQSY_SY.cshtml
@@ -96,12 +96,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_syxb_nan">
-                        <img class="img_radio" id="img_syxb_nan" /><label class="label_radio">男</label>
+                        <img class="img_radio" id="img_syxb_nan"/><label class="label_radio">男</label>
                     </div>
                     <div class="div_radio" id="div_syxb_nv">
-                        <img class="img_radio" id="img_syxb_nv" /><label class="label_radio">女</label>
+                        <img class="img_radio" id="img_syxb_nv"/><label class="label_radio">女</label>
                     </div>
                 </div>
+                <div id="divSYXBTip"></div>
             </div>
             <div id="divZCFG" class="div_row" style="z-index: 998">
                 <div class="div_row_left">
@@ -122,22 +123,31 @@
                         <img class="img_radio" id="img_zcfg_jq"/><label class="label_radio">激情</label>
                     </div>
                 </div>
+                <div id="divZCFGTip"></div>
             </div>
-            <div id="divSYCYSJ" class="div_row" style="z-index: 999">
+            <div id="divCYSJ" class="div_row" style="z-index: 999">
                 <div class="div_row_left">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">从业时间</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divCYSJText" class="div_select_out SRK" style="position: relative;">
-                        <div id="divCYSJSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <span id="spanCYSJ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择从业时间</span>
-                            <div class="span_select_arrow"></div>
-                        </div>
-                        <div id="divCYSJ" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
+                    <div class="div_radio" id="div_cysj_ynyx">
+                        <img class="img_radio" id="img_cysj_ynyx"/><label class="label_radio">1年以下</label>
+                    </div>
+                    <div class="div_radio" id="div_cysj_ydsn">
+                        <img class="img_radio" id="img_cysj_ydsn"/><label class="label_radio">1-3年</label>
+                    </div>
+                    <div class="div_radio" id="div_cysj_sdwn">
+                        <img class="img_radio" id="img_cysj_sdwn"/><label class="label_radio">3-5年</label>
+                    </div>
+                    <div class="div_radio" id="div_cysj_wdsn">
+                        <img class="img_radio" id="img_cysj_wdsn"/><label class="label_radio">5-10年</label>
+                    </div>
+                    <div class="div_radio" id="div_cysj_snys">
+                        <img class="img_radio" id="img_cysj_snys"/><label class="label_radio">10年以上</label>
                     </div>
                 </div>
+                <div id="divCYSJTip"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -220,16 +230,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -237,8 +247,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
