--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_CZZX/HQSY_CZZX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_CZZX/HQSY_CZZX.cshtml
@@ -96,18 +96,19 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_hzlx_xlz">
-                        <img class="img_radio" id="img_hzlx_xlz" /><label class="label_radio">新娘妆</label>
+                        <img class="img_radio" id="img_hzlx_xlz"/><label class="label_radio">新娘妆</label>
                     </div>
                     <div class="div_radio" id="div_hzlx_yhz">
-                        <img class="img_radio" id="img_hzlx_yhz" /><label class="label_radio">宴会/主持人妆</label>
+                        <img class="img_radio" id="img_hzlx_yhz"/><label class="label_radio">宴会/主持人妆</label>
                     </div>
                     <div class="div_radio" id="div_hzlx_nhz">
-                        <img class="img_radio" id="img_hzlx_nhz" /><label class="label_radio">年会/演出妆</label>
+                        <img class="img_radio" id="img_hzlx_nhz"/><label class="label_radio">年会/演出妆</label>
                     </div>
                     <div class="div_radio" id="div_hzlx_zzggz">
-                        <img class="img_radio" id="img_hzlx_zzggz" /><label class="label_radio">杂志广告妆</label>
+                        <img class="img_radio" id="img_hzlx_zzggz"/><label class="label_radio">杂志广告妆</label>
                     </div>
                 </div>
+                <div id="divHZLXTip"></div>
             </div>
             <div id="divHZXL" class="div_row" style="z-index: 998">
                 <div class="div_row_left">
@@ -122,6 +123,7 @@
                         <img class="img_radio" id="img_hzxl_qcgz"/><label class="label_radio">全程跟妆</label>
                     </div>
                 </div>
+                <div id="divHZXLTip"></div>
             </div>
             <div id="divFWXS" class="div_row" style="z-index: 998">
                 <div class="div_row_left">
@@ -130,12 +132,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_fwxs_sm">
-                        <img class="img_radio" id="img_fwxs_sm" /><label class="label_radio">上门</label>
+                        <img class="img_radio" id="img_fwxs_sm"/><label class="label_radio">上门</label>
                     </div>
                     <div class="div_radio" id="div_fwxs_dd">
-                        <img class="img_radio" id="img_fwxs_dd" /><label class="label_radio">到店</label>
+                        <img class="img_radio" id="img_fwxs_dd"/><label class="label_radio">到店</label>
                     </div>
                 </div>
+                <div id="divFWXSTip"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -148,7 +151,7 @@
                         <span class="spaninput_fontcolor">元</span>
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 995; position: relative;"></div>
+                <div id="divJGTip" class="Warn"></div>
             </div>
             <div id="divFWQY" class="div_row" style="z-index: 994">
                 <div class="div_row_left">
@@ -218,16 +221,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -235,8 +238,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
