--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_HSLF/HQSY_HSLF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HQSY_HSLF/HQSY_HSLF.cshtml
@@ -103,6 +103,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divHSLFYSTip" class="Warn"></div>
             </div>
             <div id="divFG" class="div_row" style="z-index: 998">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -111,18 +112,19 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_fg_lm">
-                        <img class="img_radio" id="img_fg_lm" /><label class="label_radio">浪漫</label>
+                        <img class="img_radio" id="img_fg_lm"/><label class="label_radio">浪漫</label>
                     </div>
                     <div class="div_radio" id="div_fg_ct">
-                        <img class="img_radio" id="img_fg_ct" /><label class="label_radio">传统</label>
+                        <img class="img_radio" id="img_fg_ct"/><label class="label_radio">传统</label>
                     </div>
                     <div class="div_radio" id="div_fg_xg">
-                        <img class="img_radio" id="img_fg_xg" /><label class="label_radio">性感</label>
+                        <img class="img_radio" id="img_fg_xg"/><label class="label_radio">性感</label>
                     </div>
                     <div class="div_radio" id="div_fg_yl">
-                        <img class="img_radio" id="img_fg_yl" /><label class="label_radio">艳丽</label>
+                        <img class="img_radio" id="img_fg_yl"/><label class="label_radio">艳丽</label>
                     </div>
                 </div>
+                <div id="divFGTip" class="Warn"></div>
             </div>
             <div id="divHSLFLX" class="div_row" style="z-index: 997">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -139,6 +141,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divHSLFLXTip" class="Warn"></div>
             </div>
             <div id="divDGZQ" class="div_row" style="z-index: 996;">
                 <div class="div_row_left">
@@ -168,6 +171,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divHSLFCZTip" class="Warn"></div>
             </div>
             <div id="divKS" class="div_row" style="z-index: 994;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -176,18 +180,19 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_ks_gzx">
-                        <img class="img_radio" id="img_ks_gzx" /><label class="label_radio">公主型</label>
+                        <img class="img_radio" id="img_ks_gzx"/><label class="label_radio">公主型</label>
                     </div>
                     <div class="div_radio" id="div_ks_ywx">
-                        <img class="img_radio" id="img_ks_ywx" /><label class="label_radio">鱼尾型</label>
+                        <img class="img_radio" id="img_ks_ywx"/><label class="label_radio">鱼尾型</label>
                     </div>
                     <div class="div_radio" id="div_ks_xsx">
-                        <img class="img_radio" id="img_ks_xsx" /><label class="label_radio">修身型</label>
+                        <img class="img_radio" id="img_ks_xsx"/><label class="label_radio">修身型</label>
                     </div>
                     <div class="div_radio" id="div_ks_pqx">
-                        <img class="img_radio" id="img_ks_pqx" /><label class="label_radio">蓬裙型</label>
+                        <img class="img_radio" id="img_ks_pqx"/><label class="label_radio">蓬裙型</label>
                     </div>
                 </div>
+                <div id="divKSTip" class="Warn"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 993;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -270,16 +275,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -287,8 +292,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip" class="Warn"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
