--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY_YLHH/NLMFY_YLHH.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY_YLHH/NLMFY_YLHH.cshtml
@@ -112,7 +112,7 @@
                     <span class="spanFWCZ">小类</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divXLText" class="div_select_out SRK" style="position: relative;">
+                    <div id="divXLText" class="div_select_out SRK" style="position: relative;z-index: 997">
                         <div id="divXLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanXL" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择小类</span>
                             <div class="span_select_arrow"></div>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="divYLHHXLTip" class="Warn"></div>
+                <div id="divYLHHXLTip" class="Warn" style="z-index: 996"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">特色描述</span>
